------------------------------------------------------------------------
r1737 | gaser | 2020-11-25 11:49:44

Changed paths:
M       CHANGES.txt
M       cat_batch_cat.m
M       cat_plot_boxplot.m
 M      development/y_MNI152NLin6Asym_T1w.nii

Fixed: cat12.sh and cat_batch_cat.m had issues with multiples files if length of 
       filenames differed.
------------------------------------------------------------------------
r1736 | dahnke | 2020-11-24 13:48:41 +0100 (Di, 24 Nov 2020) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_run.m
M       cat_surf_info.m
M       cat_surf_parameters.m
M       cat_surf_resamp.m

(1) Fixed:   Removed temporar setting in lazy preprocessing in cat_run.
(2) Fixed:   Corrected settings for cerebellar processing in  
             cat_surf_parameters and cat_surf_resamp.
(3) Fixed:   Corrected XML setting in cat_surf_info.


------------------------------------------------------------------------
r1735 | gaser | 2020-11-23 10:33:31 +0100 (Mo, 23 Nov 2020) | 12 lines

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       Makefile
A       development/y_MNI152NLin6Asym_T1w.nii
M       html/cat.html

(1) Added:   Added deformation field for atlases based on MNI152NLin6Asym_T1w.
(2) Changed: Precompiled packages are now also versioned to better support 
             docker and singularity containers.

------------------------------------------------------------------------
r1734 | gaser | 2020-11-19 13:07:31 +0100 (Do, 19 Nov 2020) | 13 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat_conf_long.m
M       cat_surf_surf2roi.m
M       html/cat.html

(1) Changed: Experimental long. bias correction was moved to developer mode.
(2) Fixed:   Extraction ROI-based surface values for Schaefer atlases resulted 
             in NaNs because label definition was not corrected (thanks to 
             Thomas Zeffiro amd Felix Hoffstaedter for pointing to that issue). 
