@@ -279,11 +279,12 @@ switch lower(Action), case 'setup'                         %-Set up results
             [SPM,xSPM] = spm_getSPM(varargin{2});
         end
     else
-        if use_tfce
+        if exist(fullfile(spm('dir'),'toolbox','TFCE'),'dir')
             [spmmatfile, sts] = spm_select(1,'^SPM\.mat$','Select SPM.mat');
             swd = spm_file(spmmatfile,'fpath');
+            warning off
             load(fullfile(swd,'SPM.mat'),'SPM','xSPM');
-        
+            warning on
         
             [Ic,xCon] = spm_conman(SPM,'T&F',Inf,'    Select contrast(s)...');
             SPM.Ic = Ic; SPM.xCon = xCon;
@@ -325,6 +326,10 @@ switch lower(Action), case 'setup'                         %-Set up results
         return;
     end
  
+    if ~use_tfce
+        xSPM.invResult = 0;
+    end
+    
     if spm_mesh_detect(xSPM.Vspm)
       mesh_detect = 1;
     else
@@ -462,18 +467,16 @@ switch lower(Action), case 'setup'                         %-Set up results
     FS     = spm('FontSizes');
     hMIPax = axes('Parent',Fgraph,'Position',[0.05 0.60 0.55 0.36],'Visible','off');
     if spm_mesh_detect(xSPM.Vspm)
+       tmp  = zeros(1,prod(xSPM.DIM));
+       tmp(xSPM.XYZ(1,:)) = xSPM.Z;
        % block to call cat_surf_render rather than spm_mesh_render
         if useCAT>1 & exist('cat_surf_render')
             hMax = cat_surf_render('Disp',SPM.xVol.G,'Parent',hMIPax,'Results',1);
-            tmp  = zeros(1,prod(xSPM.DIM));
-            tmp(xSPM.XYZ(1,:)) = xSPM.Z;
             hMax = cat_surf_render('Overlay',hMax,tmp);
             hMax = cat_surf_render('ColourMap',hMax,jet);
             hMax = cat_surf_render('Register',hMax,hReg);
         else
             hMax = spm_mesh_render('Disp',SPM.xVol.G,'Parent',hMIPax);
-            tmp  = zeros(1,prod(xSPM.DIM));
-            tmp(xSPM.XYZ(1,:)) = xSPM.Z;
             hMax = spm_mesh_render('Overlay',hMax,tmp);
             hMax = spm_mesh_render('Register',hMax,hReg);
             hMax = spm_mesh_render('ColourMap',hMax,jet);
@@ -650,7 +653,11 @@ switch lower(Action), case 'setup'                         %-Set up results
 
     if isfield(xSPM,'G')
         % create SPM result table and fix elements to avoid rotation of tables
-        spm_list_cleanup; 
+        if use_tfce
+            tfce_list('List',xSPM,hReg); 
+        else
+            spm_list_cleanup; 
+        end
 
         % corrections for top elements
         hRes.Fgraph       = spm_figure('GetWin','Graphics');
@@ -810,15 +817,17 @@ switch lower(Action), case 'setup'                         %-Set up results
             Enable = 'on';
         end
         
-        uicontrol('Parent',hPan,'Style','PushButton','String','small volume',...
-            'Units','Pixels',...
-            'FontSize',FS(10),...
-            'ToolTipString',['Small Volume Correction - corrected p-values ',...
-            'for a small search region'],...
-            'Callback','TabDat = spm_VOI(SPM,xSPM,hReg);',...
-            'Interruptible','off','Enable',Enable,...  
-            'Position',[005 005 100 020].*WS);
-
+        if ~use_tfce
+            uicontrol('Parent',hPan,'Style','PushButton','String','small volume',...
+                'Units','Pixels',...
+                'FontSize',FS(10),...
+                'ToolTipString',['Small Volume Correction - corrected p-values ',...
+                'for a small search region'],...
+                'Callback','TabDat = spm_VOI(SPM,xSPM,hReg);',...
+                'Interruptible','off','Enable',Enable,...  
+                'Position',[005 005 100 020].*WS);
+        end
+        
         hPan = uipanel('Parent',hReg,'Title','Multivariate','Units','Pixels',...
             'Position',[120 085 150 092].*WS,...
             'BorderType','Beveledout', ...
